src/test/ui/consts/issue-73976-polymorphic.stderr
error: could not evaluate constant pattern
  --> $DIR/issue-73976-polymorphic.rs:19:37
   |
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/issue-73976-polymorphic.rs:31:42
   |
LL |     matches!(GetTypeNameLen::<T>::VALUE, GetTypeNameLen::<T>::VALUE)
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/issue-73976-polymorphic.rs:19:37
   |
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/issue-73976-polymorphic.rs:31:42
   |
LL |     matches!(GetTypeNameLen::<T>::VALUE, GetTypeNameLen::<T>::VALUE)
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

